examples/fail/semantic/index_not_integer.bina
// EXPECT_SEMANTIC_ERROR: array index must be integer
fn main() -> int {
    let values: [2]int32 = [10, 20];
    let x = values[true];
    return x;
}
